Bugfix:修复了dao层部分bug
