# docs/swagger.json
@@ -275,6 +275,20 @@
                 "responses": {}
             }
         },
+        "/user": {
+            "get": {
+                "security": [
+                    {
+                        "ApiAuthToken": []
+                    }
+                ],
+                "tags": [
+                    "用户"
+                ],
+                "summary": "获取用户信息",
+                "responses": {}
+            }
+        },
         "/user/avatar": {
             "put": {
                 "security": [
